packages/kyvernoPolicies/chart/tests/vpol/restrict-host-path-mount-cel/kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-hostpath-disallowed
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - name: host
      mountPath: /host-etc
  volumes:
  - name: host
    hostPath:
      path: /etc
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-hostpath-mixed
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
  volumes:
  - name: ok
    hostPath:
      path: /tmp/allowed
  - name: bad
    hostPath:
      path: /etc
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-hostpath-prefix-bypass
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
  volumes:
  - name: host
    hostPath:
      path: /tmp/allowed-evil
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-volumes
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-hostpath
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - name: cfg
      mountPath: /cfg
    - name: scratch
      mountPath: /scratch
  volumes:
  - name: cfg
    configMap:
      name: example
  - name: scratch
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-hostpath-allowed
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - name: host
      mountPath: /allowed
  volumes:
  - name: host
    hostPath:
      path: /tmp/allowed
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-hostpath-allowed-regex
  namespace: default
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - name: logs
      mountPath: /logs
  volumes:
  - name: logs
    hostPath:
      path: /var/log/myapp
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-hostpath-disallowed
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: c1
        image: nginx
      volumes:
      - name: host
        hostPath:
          path: /etc
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-hostpath-allowed
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: c1
        image: nginx
      volumes:
      - name: host
        hostPath:
          path: /tmp/allowed
